# n_ethercat_interface

./: CMakeLists.txt
config/: conf.yaml  program_config_example.yaml
examples/: CMakeLists.txt
examples/somanet_node_example/: CMakeLists.txt  somanet_node_config.yaml  somanet_node_example.cpp
include/ethercat_interface/: comm_interface.hpp  data.hpp  ec_common_defs.hpp  ec_utils.hpp  ethercat_interface.hpp  master.hpp  parser.hpp  slave.hpp  time_operations.hpp
include/ethercat_interface/driver/: driver_state_machine.hpp
src/: comm_interface.cpp  data.cpp  driver_state_machine.cpp  ec_utils.cpp  master.cpp  parser.cpp  slave.cpp  time_operations.cpp
test/: CMakeLists.txt
test/multiple_identical_slaves_test/: multiple_identical_slaves_test.cpp  multiple_identical_slaves_test.yaml
test/parser-test/: CMakeLists.txt  test.cpp  test_config.yaml
test/shared_data_test/: shared_data_test.cpp
test/single_slave_test/: single_slave_test.cpp  single_slave_test.yaml
test/timer_test/: timer_test  timer_test.cpp
